--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-h1.title, .box1, .box2, .box3, h2, .header, .navlinks, .maincontainer, .footer {
+h1.title, .box1, .box2, .box3, h2, .header, .navlinks, .footer {
     display: none;
 }
 
